--- a/style.css
+++ b/style.css
@@ -5,11 +5,17 @@
 
 .main{
     width: 100%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 50%), url(12.jpg);
+    /* background removed so image applies only to #home */
+    padding-top: 75px; /* keep space for fixed navbar */
+    box-sizing: border-box;
+}
+
+/* home section background only */
+#home.content {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 50%), url("12.jpg") center/cover no-repeat;
     background-position: center;
     background-size: cover;
-    /* remove fixed height so all sections can be visible */
-    padding-top: 75px; /* keep space for fixed navbar */
+    min-height: calc(100vh - 75px);
 }
 
 .site-header{
@@ -254,4 +260,3 @@ html {
 :target {
     scroll-margin-top: 80px; /* adjust if navbar height differs */
 }
-
